mudanca na estrutura do curso, melhoria da ui do curso e atualizacao dos testes